[gd_scene load_steps=6 format=2]

[ext_resource path="res://Arrow_Overlay.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fal Arrow.png" type="Texture" id=2]
[ext_resource path="res://Settings.gd" type="Script" id=3]
[ext_resource path="res://CROWNT.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 4 )

[node name="Arrow_Overlay" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( -16, 3 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
offset = Vector2( -110.821, 120.928 )

[node name="Label" type="Label" parent="Arrow"]
margin_left = -298.0
margin_top = 222.0
margin_right = 108.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 1 )
text = "Clicker Name Here"
align = 1
valign = 1

[node name="MarginContainer" type="Control" parent="."]
margin_right = 600.0
margin_bottom = 300.0

[node name="Indicator" type="TextureRect" parent="MarginContainer"]
anchor_left = 1.0
anchor_top = 0.95
anchor_right = 1.0
anchor_bottom = 0.95
margin_left = -35.0
margin_top = -35.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Reconnect" type="Timer" parent="."]
wait_time = 120.0
autostart = true

[node name="Hider" type="Timer" parent="."]
one_shot = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Popup_Layer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Popup_Layer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 700.0
margin_top = 512.0
margin_right = 297.0
margin_bottom = 319.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Settings" type="WindowDialog" parent="Popup_Layer/MarginContainer"]
visible = true
margin_left = 5.0
margin_top = 5.0
margin_right = 192.0
margin_bottom = 102.0
window_title = "Settings"
resizable = true
script = ExtResource( 3 )
overlay_path = NodePath("../../..")

[node name="VBoxContainer" type="VBoxContainer" parent="Popup_Layer/MarginContainer/Settings"]
margin_left = 5.0
margin_top = 5.0
margin_right = 179.0
margin_bottom = 85.0

[node name="HBoxContainer" type="HBoxContainer" parent="Popup_Layer/MarginContainer/Settings/VBoxContainer"]
margin_right = 174.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Popup_Layer/MarginContainer/Settings/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 96.0
margin_bottom = 19.0
text = "Click Cooldown"

[node name="Cooldown_Set" type="SpinBox" parent="Popup_Layer/MarginContainer/Settings/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 174.0
margin_bottom = 24.0
step = 0.001
value = 0.3
suffix = "Sec"

[node name="HBoxContainer2" type="HBoxContainer" parent="Popup_Layer/MarginContainer/Settings/VBoxContainer"]
margin_top = 28.0
margin_right = 174.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="Popup_Layer/MarginContainer/Settings/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 79.0
margin_bottom = 19.0
text = "Visible Time"

[node name="Visible_Set" type="SpinBox" parent="Popup_Layer/MarginContainer/Settings/VBoxContainer/HBoxContainer2"]
margin_left = 83.0
margin_right = 157.0
margin_bottom = 24.0
step = 0.001
value = 0.3
suffix = "Sec"

[node name="CheckBox" type="CheckBox" parent="Popup_Layer/MarginContainer/Settings/VBoxContainer"]
margin_top = 56.0
margin_right = 174.0
margin_bottom = 80.0
pressed = true
text = "Arrow Enabled"

[connection signal="tween_completed" from="Tween" to="." method="start_cooldown"]
[connection signal="timeout" from="Cooldown" to="." method="cooldown_over"]
[connection signal="timeout" from="Reconnect" to="." method="reconnect"]
[connection signal="timeout" from="Hider" to="." method="move_offscreen"]
[connection signal="request_completed" from="HTTPRequest" to="." method="check_http"]
[connection signal="value_changed" from="Popup_Layer/MarginContainer/Settings/VBoxContainer/HBoxContainer/Cooldown_Set" to="Cooldown" method="set_wait_time"]
[connection signal="value_changed" from="Popup_Layer/MarginContainer/Settings/VBoxContainer/HBoxContainer2/Visible_Set" to="Hider" method="set_wait_time"]
[connection signal="toggled" from="Popup_Layer/MarginContainer/Settings/VBoxContainer/CheckBox" to="." method="toggle_arrow"]
